FIxed enrollment creation, update, and deletion.
